Fixed text in input boxes being unreadable

--- a/style.css
+++ b/style.css
@@ -389,6 +389,7 @@ body {
 
 .contact-InputBar {
 	width: 100%;
+	color: black;
 }
 
 .contact-EmailContainer {
